# mk-rs

./: .editorconfig  .gitignore  CHANGELOG  CODE_OF_CONDUCT.md  COPYRIGHT  Cargo.toml  Containerfile  Cross.toml  README.md  build.rs  install.sh  sample.tasks.lua  sample.tasks.yaml  tasks.yaml
.github/workflows/: build-push-release.yml  ci.yml
.mk-internal/vault/local/agents/: data.asc
.mk/vault/test/: data.asc
coverage/html/: coverage.json  index.html
coverage/html/src/: defaults.rs.html  file.rs.html  index.html  macros.rs.html  utils.rs.html  version.rs.html
coverage/html/src/schema/: include.rs.html  index.html  mod.rs.html  precondition.rs.html  task.rs.html  task_context.rs.html  task_dependency.rs.html  task_root.rs.html  use_cargo.rs.html  use_npm.rs.html
coverage/html/src/schema/command/: container_build.rs.html  container_run.rs.html  index.html  local_run.rs.html  mod.rs.html  task_run.rs.html
crates/prettytable-rs/: Cargo.toml  README.md
crates/prettytable-rs/examples/: basic.rs  csv.rs  formatting.rs  multiline.rs  slices.rs  span.rs  style.rs  tictactoe.rs
crates/prettytable-rs/src/: cell.rs  csv.rs  evcxr.rs  format.rs  lib.rs  main.rs  row.rs  utils.rs
crates/serde-yaml/: Cargo.toml
crates/serde-yaml/src/: de.rs  error.rs  lib.rs  loader.rs  mapping.rs  number.rs  path.rs  ser.rs  with.rs
crates/serde-yaml/src/libyaml/: cstr.rs  emitter.rs  error.rs  parser.rs  tag.rs  util.rs
crates/serde-yaml/src/value/: de.rs  debug.rs  from.rs  index.rs  mod.rs  partial_eq.rs  ser.rs  tagged.rs
crates/serde-yaml/tests/: test_de.rs  test_error.rs  test_serde.rs  test_value.rs
docs/: README.md  _navbar.md  index.html  schema.json  schema.md
examples/: build-project-in-container.yaml  build-rust-image-method-2.tasks.yaml  build-rust-image.tasks.yaml  hello-world.tasks.yaml  ignore-errors.tasks.yaml  linked.tasks.yaml  sample-2.tasks.yaml  sample.tasks.yaml  verbose.tasks.yaml
fuzz/: Cargo.toml
scripts/: release.sh
src/: cache.rs  defaults.rs  file.rs  lib.rs  macros.rs  secrets.rs  utils.rs  version.rs
src/schema/: command.rs  include.rs  mod.rs  plan.rs  precondition.rs  shell.rs  task.rs  task_context.rs  task_dependency.rs  task_root.rs  use_cargo.rs  use_npm.rs  validation.rs
src/schema/command/: container_build.rs  container_run.rs  container_runtime.rs  local_run.rs  mod.rs  task_run.rs
tests/: cmd_test.rs  readme_test.rs  test_cmd.rs
tests/common/: mod.rs
