[package]
name = "mk"
version = "0.1.12"
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
edition = "2021"
readme = "README.md"
description = "Yet another simple task runner 🦀"
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/mk-rs"
repository = "https://github.com/ffimnsr/mk-rs"
license = "MIT OR Apache-2.0"
keywords = ["command-line", "task-runner", "cli", "runner", "utility"]
exclude = [".gitignore"]

[lib]
name = "mk_lib"
path = "src/lib.rs"

[[bin]]
name = "mk"
path = "src/cli/bin/main.rs"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["serde"] }
clap = { version = "4.5.23", features = ["derive"] }
clap_complete = "4.5.40"
console = "0.15.10"
env_logger = "0.11.6"
git2 = "0.19.0"
indicatif = "0.17.9"
lazy_static = "1.5.0"
log = "0.4.22"
prettytable-rs = "0.10.0"
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
serde_yaml = "0.9.34"
thiserror = "2.0.9"
which = "7.0.1"
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = "3.1.3"
snapbox = "0.6.21"
tempfile = "3.14.0"
trycmd = "0.15.8"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
name = "mk"
maintainer = "Edward Fitz Abucay gh:@ffimnsr"
section = "utils"
assets = [
  ["target/release/mk", "usr/bin/", "755"],
  ["COPYRIGHT", "usr/share/doc/mk/", "644"],
  ["LICENSE-MIT", "usr/share/doc/mk/", "644"],
  ["LICENSE-APACHE", "usr/share/doc/mk/", "644"],
  ["README.md", "usr/share/doc/mk/README", "644"],
]
extended-description = """\
mk is a simple task runner written in Rust. It is inspired by the make utility
but with a simpler syntax and more modern features. mk is designed to be
simple, fast, and easy to use.
"""
