[package]
name = "mk"
version = "0.4.0"
authors = ["Edward Fitz Abucay <gh:@ffimnsr>"]
edition = "2021"
readme = "README.md"
description = "Yet another simple task runner 🦀"
categories = ["command-line-utilities", "development-tools"]
homepage = "https://github.com/ffimnsr/mk-rs"
repository = "https://github.com/ffimnsr/mk-rs"
license = "MIT OR Apache-2.0"
keywords = ["command-line", "task-runner", "cli", "runner", "utility"]
exclude = [
  ".gitignore",
  "/.githooks/",
  "/.github/",
  "/ci/",
  "/docs/",
]

[lib]
name = "mk_lib"
path = "src/lib.rs"

[[bin]]
name = "mk"
path = "src/cli/bin/main.rs"

[workspace]
members = [
  "crates/prettytable-rs",
  "crates/serde-yaml",
]

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.39", features = ["clock", "serde", "std"], default-features = false }
clap = { version = "4.5.23", features = ["cargo", "derive", "env"] }
clap_complete = "4.5.40"
console = "0.15.10"
env_logger = "0.11.6"
git2 = { version = "0.19.0", default-features = false }
indicatif = "0.17.9"
log = "0.4.22"
mk_ext_prettytable = { version = "0.11.0", path = "crates/prettytable-rs", default-features = false, features = ["win_crlf"] }
mk_ext_serde_yaml = { version = "0.10.0", path = "crates/serde-yaml" }
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"
which = "7.0.1"
openssl = { version = "0.10", features = ["vendored"] }
ssh2 = "0.9.4"
regex = "1.11.1"
once_cell = "1.20.2"
pgp = "0.16.0"
hex = "0.4.3"
hashbrown = { version = "0.15.2", features = ["serde"] }
mlua = { version = "0.10.2", features = ["lua54", "serialize", "anyhow", "vendored"] }
toml = "0.8.19"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
semver = "1"

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
predicates = { version = "3.1.3", default-features = false, features = ["diff", "regex"] }
snapbox = "0.6.21"
trycmd = "0.15.8"

[profile.release]
debug = 1

[profile.release-lto]
inherits = "release"
opt-level = 3
debug = "none"
strip = "symbols"
debug-assertions = false
overflow-checks = false
lto = "fat"
panic = "abort"
incremental = false
codegen-units = 1

[profile.deb]
inherits = "release"
debug = false

[package.metadata.deb]
name = "mk"
maintainer = "Edward Fitz Abucay gh:@ffimnsr"
section = "utils"
assets = [
  ["target/release/mk", "usr/bin/", "755"],
  ["COPYRIGHT", "usr/share/doc/mk/", "644"],
  ["LICENSE-MIT", "usr/share/doc/mk/", "644"],
  ["LICENSE-APACHE", "usr/share/doc/mk/", "644"],
  ["README.md", "usr/share/doc/mk/README", "644"],
]
extended-description = """\
mk is a simple task runner written in Rust. It is inspired by the make utility
but with a simpler syntax and more modern features. mk is designed to be
simple, fast, and easy to use.
"""
