[package]
name = "mk_ext_prettytable"
version = "0.11.0"
description = "A library for printing pretty formatted tables in terminal"
homepage = "https://github.com/phsym/prettytable-rs"
repository = "https://github.com/phsym/prettytable-rs"
documentation = "https://docs.rs/crate/prettytable-rs/"
readme = "README.md"
authors = ["Pierre-Henri Symoneaux", "Edward Fitz Abucay <gh:@ffimnsr>"]
keywords = ["tab", "table", "format", "pretty", "print"]
categories = ["command-line-interface"]
license = "BSD-3-Clause"
edition = "2021"
exclude = ["prettytable-evcxr.png"]

[features]
default = ["win_crlf"]
evcxr = []
win_crlf = []

[[bin]]
name = "main"
edition = "2021"
path = "src/main.rs"

[lib]
name = "prettytable"

[dependencies]
unicode-width = "0.2"
term = "0.7"
is-terminal = "0.4"
encode_unicode = "1.0"
csv = { version = "1.1", optional = true }
once_cell = "1.20.2"
